<resources>
    <string name="access_sd_fail">"Couldn't access USB storage."</string>
    <string name="accessibility_ai_scene_off">AI camera is off</string>
    <string name="accessibility_ai_scene_on">AI camera is on</string>
    <string name="accessibility_audio_shutter_bg">Audio Shutter background</string>
    <string name="accessibility_back_preview_status">Rear camera preview</string>
    <string name="accessibility_beauty_panel_closed">Beautify menu is hidden</string>
    <string name="accessibility_beauty_panel_open">Beautify menu is opened</string>
    <string name="accessibility_beauty_switch_closed">Beautify is off</string>
    <string name="accessibility_beauty_switch_open">Beautify is on</string>
    <string name="accessibility_bokeh_adjust">Adjusting background blur</string>
    <string name="accessibility_bokeh_level">F%1$s aperture</string>
    <string name="accessibility_bokeh_normal">Front camera background blur is off</string>
    <string name="accessibility_bokeh_on">Front camera background blur is on</string>
    <string name="accessibility_camera_liveshot_off">Turned off dynamic shots</string>
    <string name="accessibility_camera_liveshot_on">Turned on dynamic shots</string>
    <string name="accessibility_camera_module_picker">CameraModulePicker</string>
    <string name="accessibility_camera_picker">Front and rear camera switch</string>
    <string name="accessibility_camera_picker_finish">Switched cameras successfully</string>
    <string name="accessibility_camera_shutter_finish">Took a photo successfully</string>
    <string name="accessibility_camera_ultra_wide_bokeh_off">Full body mode is off</string>
    <string name="accessibility_camera_ultra_wide_bokeh_on">Full body mode is on</string>
    <string name="accessibility_closed">Turned off</string>
    <string name="accessibility_effect_mode_button">Effect button</string>
    <string name="accessibility_filter_close_panel">Closed filter menu</string>
    <string name="accessibility_filter_open_panel">Opened filter menu</string>
    <string name="accessibility_filter_pad_close">Filter menu is hidden</string>
    <string name="accessibility_flash_auto">Auto flash is on</string>
    <string name="accessibility_flash_mode_button">FlashButton</string>
    <string name="accessibility_flash_off">Flash is off</string>
    <string name="accessibility_flash_on">Flash is on</string>
    <string name="accessibility_flash_torch">Flash is on, torch mode</string>
    <string name="accessibility_focus_status">%1$sX zoom</string>
    <string name="accessibility_foucs_peak">Peak value</string>
    <string name="accessibility_front_preview_status">Front camera preview</string>
    <string name="accessibility_hdr">HDR switch button</string>
    <string name="accessibility_hdr_auto">Auto HDR is on</string>
    <string name="accessibility_hdr_live">HDR Live is on</string>
    <string name="accessibility_hdr_normal">HDR Pro is on</string>
    <string name="accessibility_hdr_off">HDR is off</string>
    <string name="accessibility_hdr_on">HDR is on</string>
    <string name="accessibility_intent_done_apply">Done</string>
    <string name="accessibility_intent_done_retry">Retry</string>
    <string name="accessibility_lighting_panel_off">Studio lighting bar is hidden</string>
    <string name="accessibility_lighting_panel_on">Showing studio lighting bar</string>
    <string name="accessibility_mode">Accessibility mode</string>
    <string name="accessibility_mode_dismiss_button">Close Mode Selection button</string>
    <string name="accessibility_more">More</string>
    <string name="accessibility_open">Turned on</string>
    <string name="accessibility_peak">Focus peak button</string>
    <string name="accessibility_portrait_button">Portrait mode</string>
    <string name="accessibility_protrait">Portrait</string>
    <string name="accessibility_pull_down_to_open_camera">Swipe down to open camera</string>
    <string name="accessibility_review_thumbnail">Most recent photo</string>
    <string name="accessibility_seek_bar_line">SeekBarLine</string>
    <string name="accessibility_selected">Selected items</string>
    <string name="accessibility_setting">Settings</string>
    <string name="accessibility_setting_button">Additional settings button</string>
    <string name="accessibility_shutter_button">Shutter button</string>
    <string name="accessibility_skin_beautify_button">SkinBeautifyButton</string>
    <string name="accessibility_stereo_button">Focus adjustment</string>
    <string name="accessibility_ultra_pixel_photography_32mp_off">32MP is off</string>
    <string name="accessibility_ultra_pixel_photography_32mp_on">32MP is on</string>
    <string name="accessibility_ultra_pixel_photography_48mp_off">48MP is off</string>
    <string name="accessibility_ultra_pixel_photography_48mp_on">48MP is on</string>
    <string name="accessibility_ultra_wide_off">Turned off Ultra wide angle mode</string>
    <string name="accessibility_ultra_wide_on">Turned on Ultra wide angle mode</string>
    <string name="accessibility_video_btn_play">Play video</string>
    <string name="accessibility_video_capture_button">VideoCaptureButton</string>
    <string name="accessibility_video_module_picker">VideoModulePicker</string>
    <string name="accessibility_video_pause_button">VideoPauseButton</string>
    <string name="accessibility_zoom_button">Zoom mode</string>
    <string name="ai_scene_mode_use_hint_text">"AI camera detects scenes automatically
and optimizes your photos based on this info"</string>
    <string name="ai_scene_top_moon_off">Low light mode</string>
    <string name="ai_scene_top_tip">Moon mode</string>
    <string name="audio_focus_exit_button_text">Turn off Audio focus</string>
    <string name="autozoom_click_hint">"Tap an object to keep it in focus while it's moving. Stay at least 3 meters away for best effect."</string>
    <string name="autozoom_disabled_hint">Stopped tracking moving object</string>
    <string name="autozoom_hint">Track moving object</string>
    <string name="autozoom_landscape_hint">Shoot in landscape mode for best effect</string>
    <string name="back_bokeh_use_hint">Keep your subject within 1.5 meters for best effect</string>
    <string name="beauty_body">Figure</string>
    <string name="beauty_body_body">Slender</string>
    <string name="beauty_body_head">Head</string>
    <string name="beauty_body_legged">Legs</string>
    <string name="beauty_body_reset_tip">Removed figure effects successfully</string>
    <string name="beauty_body_shoulder">Shoulders</string>
    <string name="beauty_body_slim_count_tip">Figure effects work only for one person shots</string>
    <string name="beauty_body_whole">Body</string>
    <string name="beauty_fragment_tab_name_3d_beauty">Beauty</string>
    <string name="beauty_fragment_tab_name_3d_makeup">Makeup</string>
    <string name="beauty_fragment_tab_name_3d_remodeling">Remodeling</string>
    <string name="beauty_fragment_tab_name_beauty">Beauty</string>
    <string name="beauty_fragment_tab_name_makeup">Advanced</string>
    <string name="beauty_reset_toast">Reset figure effects successfully</string>
    <string name="beauty_tab_name_live_beauty">Beautify</string>
    <string name="beauty_tab_name_live_filter">Filters</string>
    <string name="bokeh_use_hint">Depth effect</string>
    <string name="burst_shoot_exit_button_text">Turn off Burst shoot</string>
    <string name="button_fisheye_camera_title">Fisheye</string>
    <string name="button_front_camera_title">Make a selfie</string>
    <string name="button_normal_video_title">Record video</string>
    <string name="camera_disabled">Camera has been disabled</string>
    <string name="camera_error_title">Camera error</string>
    <string name="camera_facedetection_sub_option_hint">Experimental feature</string>
    <string name="camera_label">Camera</string>
    <string name="camera_liveshot_off_tip">Turned off dynamic shots</string>
    <string name="camera_liveshot_on_tip">Dynamic shots</string>
    <string name="camera_mode_options">Modes</string>
    <string name="camera_new_slow_motion_quality_default">6</string>
    <string name="camera_setting">Camera</string>
    <string name="camera_settings_label">Camera</string>
    <string name="camera_snap_mode_title">Quick snap mode</string>
    <string name="camera_snap_mode_title_detail">Tap to view details</string>
    <string name="cannot_connect_camera_once">"Can't connect to camera"</string>
    <string name="cannot_connect_camera_twice">"Still can't connect to camera. Try restarting your device."</string>
    <string name="popup_tip_3d_beauty_intro_text">3D Beauty</string>
    <string name="portrait_mode_depth_effect_success_hint">Depth effect</string>
    <string name="pref_audio_focus_default">normal</string>
    <string name="pref_audio_focus_title">Audio focus</string>
    <string name="pref_camcorder_settings_category">Camera settings</string>
    <string name="pref_camera_audio_capture_title">Audio</string>
    <string name="pref_camera_coloreffect_title">Filters</string>
    <string name="pref_camera_delay_capture_default">5</string>
    <string name="pref_camera_delay_capture_title">Timer</string>
    <string name="pref_camera_exposuretime_default">0</string>
    <string name="pref_camera_gradienter_title">Straighten</string>
    <string name="pref_camera_groupshot_mode_title">Group selfie</string>
    <string name="pref_camera_hand_night_title">HHT</string>
    <string name="pref_camera_iso_default">auto</string>
    <string name="pref_camera_iso_title">ISO</string>
    <string name="pref_camera_magic_mirror_title">Magic mirror</string>
    <string name="pref_camera_manual_mode_title">Manual</string>
    <string name="pref_camera_panoramamode_title">Panorama</string>
    <string name="pref_camera_portrait_mode_title">Portrait mode</string>
    <string name="pref_camera_scenemode_default">auto</string>
    <string name="pref_camera_scenemode_title">Scene</string>
    <string name="pref_camera_setting_switch_default">off</string>
    <string name="pref_camera_settings_category">Camera settings</string>
    <string name="pref_camera_shader_coloreffect_default">0</string>
    <string name="pref_camera_square_mode_title">Square</string>
    <string name="pref_camera_stereo_default">5</string>
    <string name="pref_camera_stereo_mode_title">Focus adjustment</string>
    <string name="pref_camera_tilt_shift_default">circle</string>
    <string name="pref_camera_tilt_shift_title">Tilt-shift</string>
    <string name="pref_camera_ubifocus_title">Refocus</string>
    <string name="pref_camera_whitebalance_default">auto</string>
    <string name="pref_camera_whitebalance_title">WB</string>
    <string name="pref_camera_zoom_mode_default">@string/pref_camera_zoom_mode_entryvalue_wide</string>
    <string name="pref_camera_zoom_mode_title">LENS</string>
    <string name="pref_face_beauty_medium">i:2</string>
    <string name="pref_face_beauty_title">Beautify</string>
    <string name="pref_manual_exposure_title">S</string>
    <string name="pref_qc_focus_position_title">F</string>
    <string name="pref_qc_focus_position_value_default">0</string>
    <string name="pref_skin_beautify_color_default">4</string>
    <string name="pref_skin_beautify_color_title">Tone</string>
    <string name="pref_skin_beautify_eye_default">2</string>
    <string name="pref_skin_beautify_eye_title">Eyes</string>
    <string name="pref_skin_beautify_intelligent_title">Smart</string>
    <string name="pref_skin_beautify_slim_default">3</string>
    <string name="pref_skin_beautify_slim_title">Slim</string>
    <string name="pref_skin_beautify_smooth_default">5</string>
    <string name="pref_skin_beautify_smooth_title">Skin</string>
    <string name="pref_video_speed_fast_title">Time-lapse</string>
    <string name="pref_video_speed_slow_title">Slow-motion</string>
    <string name="see_qrcode_detals">View QR code details</string>
</resources>