<?xml version="1.0" encoding="utf-8"?>
<PreferenceGroup camera:title="@string/pref_camera_settings_category"
  xmlns:camera="http://schemas.android.com/apk/res/com.android.camera">
    <IconListPreference camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:key="pref_camera_panoramamode_key" camera:singleIcon="@drawable/ic_indicator_panorama" camera:title="@string/pref_camera_panoramamode_title" />
    <IconListPreference camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:key="pref_camera_hand_night_key" camera:singleIcon="@drawable/ic_indicator_hand_night" camera:title="@string/pref_camera_hand_night_title" />
    <IconListPreference camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:key="pref_audio_capture" camera:singleIcon="@drawable/ic_indicator_audio_capture" camera:title="@string/pref_camera_audio_capture_title" />
    <IconListPreference camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:hasPopup="true" camera:key="pref_delay_capture_mode" camera:singleIcon="@drawable/ic_indicator_delaycapture" camera:title="@string/pref_camera_delay_capture_title" />
    <IconListPreference camera:defaultValue="@string/pref_camera_delay_capture_default" camera:entries="@array/pref_camera_delay_capture_entries" camera:entryValues="@array/pref_camera_delay_capture_entryvalues" camera:key="pref_delay_capture_key" camera:singleIcon="@drawable/ic_indicator_delaycapture" camera:title="@string/pref_camera_delay_capture_title" />
    <IconListPreference camera:defaultValue="@string/pref_camera_shader_coloreffect_default" camera:hasPopup="true" camera:key="pref_camera_shader_coloreffect_key" camera:singleIcon="@drawable/ic_effect_button_normal" camera:title="@string/pref_camera_coloreffect_title" />
    <IconListPreference camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:key="pref_camera_gradienter_key" camera:singleIcon="@drawable/ic_indicator_gradienter" camera:title="@string/pref_camera_gradienter_title" />
    <IconListPreference camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:hasPopup="true" camera:key="pref_camera_tilt_shift_mode" camera:singleIcon="@drawable/ic_indicator_tilt_shift" camera:title="@string/pref_camera_tilt_shift_title" />
    <IconListPreference camera:defaultValue="@string/pref_camera_tilt_shift_default" camera:entries="@array/pref_camera_tilt_shift_entries" camera:entryValues="@array/pref_camera_tilt_shift_entryvalues" camera:key="pref_camera_tilt_shift_key" camera:singleIcon="@drawable/ic_indicator_tilt_shift" camera:title="@string/pref_camera_tilt_shift_title" />
    <IconListPreference camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:key="pref_camera_magic_mirror_key" camera:singleIcon="@drawable/ic_indicator_magic_mirror" camera:title="@string/pref_camera_magic_mirror_title" />
    <IconListPreference camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:hasPopup="true" camera:key="pref_camera_face_beauty_mode_key" camera:singleIcon="@drawable/ic_indicator_facebeauty" camera:title="@string/pref_face_beauty_title" />
    <IconListPreference camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:key="pref_camera_ubifocus_key" camera:singleIcon="@drawable/ic_indicator_ubifocus" camera:title="@string/pref_camera_ubifocus_title" />
    <IconListPreference camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:hasPopup="true" camera:key="pref_camera_manual_mode_key" camera:singleIcon="@drawable/ic_indicator_manual" camera:title="@string/pref_camera_manual_mode_title" />
    <IconListPreference camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:hasPopup="false" camera:key="pref_camera_square_mode_key" camera:singleIcon="@drawable/ic_indicator_square" camera:title="@string/pref_camera_square_mode_title" />
    <IconListPreference camera:defaultValue="@string/pref_camera_exposuretime_default" camera:entries="@array/pref_camera_exposuretime_entries" camera:entryValues="@array/pref_camera_exposuretime_entryvalues" camera:hasPopup="true" camera:key="pref_qc_camera_exposuretime_key" camera:title="@string/pref_manual_exposure_title" />
    <IconListPreference camera:defaultValue="@string/pref_camera_whitebalance_default" camera:entries="@array/pref_camera_whitebalance_entries" camera:entryValues="@array/pref_camera_whitebalance_entryvalues" camera:hasPopup="true" camera:icons="@array/camera_whitebalance_icons" camera:key="pref_camera_whitebalance_key" camera:title="@string/pref_camera_whitebalance_title" />
    <IconListPreference camera:defaultValue="@string/pref_camera_iso_default" camera:entries="@array/pref_camera_iso_entries" camera:entryValues="@array/pref_camera_iso_entryvalues" camera:hasPopup="true" camera:key="pref_qc_camera_iso_key" camera:title="@string/pref_camera_iso_title" />
    <IconListPreference camera:defaultValue="@string/pref_qc_focus_position_value_default" camera:hasPopup="true" camera:key="pref_focus_position_key" camera:title="@string/pref_qc_focus_position_title" />
    <IconListPreference camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:hasPopup="false" camera:key="pref_camera_groupshot_mode_key" camera:singleIcon="@drawable/ic_indicator_groupshot" camera:title="@string/pref_camera_groupshot_mode_title" />
    <IconListPreference camera:defaultValue="@string/pref_camera_scenemode_default" camera:entries="@array/pref_camera_scenemode_entries" camera:entryValues="@array/pref_camera_scenemode_entryvalues" camera:icons="@array/camera_scenemode_largeicons" camera:key="pref_camera_scenemode_key" camera:title="@string/pref_camera_scenemode_title" />
    <IconListPreference camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:hasPopup="true" camera:key="pref_camera_scenemode_setting_key" camera:singleIcon="@drawable/ic_indicator_scenemode" camera:title="@string/pref_camera_scenemode_title" />
    <IconListPreference camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:hasPopup="true" camera:key="pref_camera_stereo_mode_key" camera:title="@string/pref_camera_stereo_mode_title" />
    <IconListPreference camera:defaultValue="@string/pref_camera_stereo_default" camera:entries="@array/pref_camera_stereo_entries" camera:entryValues="@array/pref_camera_stereo_entryvalues" camera:key="pref_camera_stereo_key" camera:title="@string/pref_camera_stereo_mode_title" />
    <IconListPreference camera:defaultValue="@string/pref_camera_zoom_mode_default" camera:entries="@array/pref_camera_zoom_mode_entries" camera:entryValues="@array/pref_camera_zoom_mode_entryvalues" camera:hasPopup="false" camera:key="pref_camera_zoom_mode_key" camera:title="@string/pref_camera_zoom_mode_title" />
    <IconListPreference camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entries="@array/pref_camera_portrait_mode_entries" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:hasPopup="false" camera:key="pref_camera_portrait_mode_key" camera:title="@string/pref_camera_portrait_mode_title" />
    <IconListPreference camera:defaultValue="@string/pref_face_beauty_medium" camera:entries="@array/pref_camera_skin_beautify_entries" camera:entryValues="@array/pref_camera_skin_beautify_entryvalues" camera:hasPopup="true" camera:icons="@array/camera_skin_beautify_icons" camera:key="pref_camera_face_beauty_key" camera:singleIcon="@drawable/ic_indicator_facebeauty" camera:title="@string/pref_skin_beautify_intelligent_title" />
    <IconListPreference camera:defaultValue="@string/pref_skin_beautify_color_default" camera:entries="@array/pref_skin_beautify_multi_level_entries" camera:entryValues="@array/pref_skin_beautify_multi_level_entryvalues" camera:hasPopup="true" camera:key="pref_skin_beautify_skin_color_key" camera:singleIcon="@drawable/ic_indicator_beautify_color" camera:title="@string/pref_skin_beautify_color_title" />
    <IconListPreference camera:defaultValue="@string/pref_skin_beautify_slim_default" camera:entries="@array/pref_skin_beautify_multi_level_entries" camera:entryValues="@array/pref_skin_beautify_multi_level_entryvalues" camera:hasPopup="true" camera:key="pref_skin_beautify_slim_face_key" camera:singleIcon="@drawable/ic_indicator_beautify_slim" camera:title="@string/pref_skin_beautify_slim_title" />
    <IconListPreference camera:defaultValue="@string/pref_skin_beautify_eye_default" camera:entries="@array/pref_skin_beautify_multi_level_entries" camera:entryValues="@array/pref_skin_beautify_multi_level_entryvalues" camera:hasPopup="true" camera:key="pref_skin_beautify_enlarge_eye_key" camera:singleIcon="@drawable/ic_indicator_beautify_eye" camera:title="@string/pref_skin_beautify_eye_title" />
    <IconListPreference camera:defaultValue="@string/pref_skin_beautify_smooth_default" camera:entries="@array/pref_skin_beautify_multi_level_entries" camera:entryValues="@array/pref_skin_beautify_multi_level_entryvalues" camera:hasPopup="true" camera:key="pref_skin_beautify_skin_smooth_key" camera:singleIcon="@drawable/ic_indicator_beautify_smooth" camera:title="@string/pref_skin_beautify_smooth_title" />
</PreferenceGroup>