<?xml version="1.0" encoding="utf-8"?>
<PreferenceGroup camera:title="@string/pref_camcorder_settings_category"
  xmlns:camera="http://schemas.android.com/apk/res/com.android.camera">
    <IconListPreference camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:key="pref_video_speed_fast_key" camera:singleIcon="@drawable/ic_indicator_video_speed_fast" camera:title="@string/pref_video_speed_fast_title" />
    <IconListPreference camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:key="pref_video_speed_slow_key" camera:singleIcon="@drawable/ic_indicator_video_speed_slow" camera:title="@string/pref_video_speed_slow_title" />
    <IconListPreference camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:hasPopup="true" camera:key="pref_audio_focus_mode_key" camera:singleIcon="@drawable/ic_indicator_audio_focus" camera:title="@string/pref_audio_focus_title" />
    <IconListPreference camera:defaultValue="@string/pref_audio_focus_default" camera:entries="@array/pref_audio_focus_entries" camera:entryValues="@array/pref_audio_focus_entryvalues" camera:key="pref_audio_focus_key" camera:singleIcon="@drawable/ic_indicator_audio_focus" camera:title="@string/pref_audio_focus_title" />
    <IconListPreference camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:hasPopup="true" camera:key="pref_camera_stereo_mode_key" camera:title="@string/pref_camera_stereo_mode_title" />
    <IconListPreference camera:defaultValue="@string/pref_camera_stereo_default" camera:entries="@array/pref_camera_stereo_entries" camera:entryValues="@array/pref_camera_stereo_entryvalues" camera:key="pref_camera_stereo_key" camera:title="@string/pref_camera_stereo_mode_title" />
</PreferenceGroup>