<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_gravity="bottom|center" android:id="@id/popup_tip_image" android:padding="@dimen/manually_indicator_image_inner_padding" android:focusable="false" android:visibility="gone" android:contentDescription="@null" style="@style/PopupButtonIndicator" />
    <FrameLayout android:layout_gravity="bottom|center" android:id="@id/popup_tip_beauty_intro" android:background="@drawable/bg_popup_indicator_beauty_intro" android:focusable="false" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="@dimen/manually_indicator_layout_size">
        <TextView android:textSize="@dimen/popup_tip_beauty_intro_textSize" android:textColor="#ffffffff" android:ellipsize="none" android:gravity="center|right" android:id="@id/popup_tip_beauty_intro_text" android:focusable="false" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="@dimen/popup_tip_beauty_intro_text_margin_bottom" android:text="@string/popup_tip_3d_beauty_intro_text" android:singleLine="true" />
    </FrameLayout>
    <TextView android:textSize="@dimen/tips_text_size" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="bottom|center" android:id="@id/popup_tips_message" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/tips_margin_left" android:layout_marginRight="@dimen/tips_margin_left" android:shadowColor="#bb000000" android:shadowRadius="2.75" />
    <TextView android:textSize="@dimen/qrcode_viewfinder_text_size" android:textColor="@color/white" android:gravity="center" android:layout_gravity="bottom|center" android:id="@id/popup_tips_qrcode" android:paddingLeft="22.0dip" android:paddingRight="22.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="100.0dip" android:text="@string/see_qrcode_detals" />
    <TextView android:layout_gravity="bottom|center" android:id="@id/portrait_success_hint" android:background="@drawable/portrait_hint_text_background" android:paddingLeft="@dimen/portrait_hint_left_right_padding" android:paddingRight="@dimen/portrait_hint_left_right_padding" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="@dimen/portrait_hint_height" android:text="@string/portrait_mode_depth_effect_success_hint" style="@style/PortraitHintTextStyle" />
</FrameLayout>